# mallog

./: .gitignore  Cargo.toml  setup-frida.sh  vendor.sh
.cargo/: config.toml
src/: config.rs  hooks.rs  lib.rs  log.rs  setup.rs  trace.rs
src/allocator/: malloc.rs  mod.rs
